--- a/Views/OrdersModule/RegisterOrderPage.xaml
+++ b/Views/OrdersModule/RegisterOrderPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="ItaliaPizzaClient.Views.RegisterSupplierOrdersPage"
+﻿<Page x:Class="ItaliaPizzaClient.Views.OrdersModule.RegisterOrderPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
+      xmlns:local="clr-namespace:ItaliaPizzaClient.Views.OrdersModule"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="RegisterSupplierOrdersPage">
+      Title="RegisterOrderPage">
 
     <Grid Background="{StaticResource BackgroundBrush}">
         <Grid.RowDefinitions>
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" BorderThickness="0,0,0,0.5"
-                BorderBrush="{StaticResource SecondaryBrush}">
+            BorderBrush="{StaticResource SecondaryBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -24,13 +24,13 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0" Orientation="Vertical" Margin="20,0,0,10" 
-                    HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                HorizontalAlignment="Left" VerticalAlignment="Bottom">
                     <TextBlock x:Name="PageHeader" 
-                               Style="{StaticResource HeaderLabelStyle}"
-                               Text="{DynamicResource RegOrderSupplier_Header}" />
+                           Style="{StaticResource HeaderLabelStyle}"
+                           Text="{DynamicResource RegOrder_Header}" />
                     <TextBlock x:Name="PageDescription"
-                               Style="{StaticResource DescriptionLabelStyle}"
-                               Text="{DynamicResource RegOrderSupplier_Desc}"/>
+                           Style="{StaticResource DescriptionLabelStyle}"
+                           Text="{DynamicResource RegOrder_Desc}"/>
                 </StackPanel>
             </Grid>
         </Border>
@@ -49,7 +49,7 @@
 
                 <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20 0" Orientation="Horizontal">
                     <TextBlock Text="{DynamicResource RegOrderSupplier_Info}"
-                               Style="{DynamicResource SubtitleLabelStyle}"/>
+                           Style="{DynamicResource SubtitleLabelStyle}"/>
                 </StackPanel>
 
                 <Grid Grid.Row="1" Margin="0 12 0 0">
@@ -57,35 +57,35 @@
                         <Border BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0 0 0 0.5">
                             <StackPanel Margin="20 0 20 16">
                                 <TextBlock Text="{DynamicResource RegOrderSupplier_SupplierInfo}"
-                                           Style="{DynamicResource DescriptionLabelStyle}"
-                                           Margin="0 0 0 8"/>
+                                       Style="{DynamicResource DescriptionLabelStyle}"
+                                       Margin="0 0 0 8"/>
                                 <StackPanel Orientation="Horizontal">
-                                    <ComboBox x:Name="CbCategories"
-                                              Width="160"
-                                              Style="{DynamicResource ComboBoxStyle}"
-                                              Tag="{DynamicResource Glb_Categories}"
-                                              SelectionChanged="CbCategories_SelectionChanged" />
-                                    <ComboBox x:Name="CbSuppliers"
-                                              IsEnabled="False"
-                                              Style="{DynamicResource ComboBoxStyle}"
-                                              Tag="{DynamicResource RegOrderSupplier_Supplier}"
-                                              Width="190" Margin="10 0 0 0"
-                                              DisplayMemberPath="SupplierName"
-                                              SelectionChanged="CbSuppliers_SelectionChanged"/>
+                                    <TextBox x:Name="TbTableNumber"
+                                             Width="160"
+                                             Style="{DynamicResource TextBoxStyle}"
+                                             Tag="{DynamicResource RegOrder_TbTableNumber}" />
+                                    <ComboBox x:Name="CbCustomers"
+                                          Width="160"
+                                          Style="{DynamicResource ComboBoxStyle}"
+                                          Tag="{DynamicResource RegOrder_CbCustomers}" />
+                                    <ComboBox x:Name="CbDelivery"
+                                          Style="{DynamicResource ComboBoxStyle}"
+                                          Tag="{DynamicResource RegOrder_CbDelivery}"
+                                          Width="190" Margin="10 0 0 0"/>
                                 </StackPanel>
                             </StackPanel>
                         </Border>
                         <Grid Margin="20 20 0 0">
                             <ScrollViewer VerticalScrollBarVisibility="Visible"
-                                          HorizontalScrollBarVisibility="Disabled">
+                                      HorizontalScrollBarVisibility="Disabled">
                                 <ItemsControl x:Name="ButtonsPanel">
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <WrapPanel Orientation="Horizontal"
-                                                       ItemHeight="170"
-                                                       ItemWidth="170"
-                                                       Margin="0"
-                                                       HorizontalAlignment="Left" />
+                                                   ItemHeight="170"
+                                                   ItemWidth="170"
+                                                   Margin="0"
+                                                   HorizontalAlignment="Left" />
                                         </ItemsPanelTemplate>
                                     </ItemsControl.ItemsPanel>
                                     <ItemsControl.ItemContainerStyle>
@@ -104,8 +104,8 @@
             </Grid>
 
             <Border Grid.Column="1" 
-                    BorderBrush="{DynamicResource SecondaryBrush}" 
-                    BorderThickness="0.5 0 0 0" >
+                BorderBrush="{DynamicResource SecondaryBrush}" 
+                BorderThickness="0.5 0 0 0" >
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="36"/>
@@ -113,19 +113,23 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20 0" Orientation="Horizontal">
-                        <TextBlock Text="{DynamicResource RegOrderSupplier_OrderDetails}"
+                    <StackPanel Grid.Row="0" 
+                                VerticalAlignment="Bottom" 
+                                Margin="20 0" 
+                                Orientation="Horizontal">
+                        <TextBlock Text="{DynamicResource RegOrder_OrderDetails}"
                                    Style="{DynamicResource SubtitleLabelStyle}"/>
                     </StackPanel>
 
                     <StackPanel x:Name="OrderDetailsPanel" Grid.Row="1" Margin="20"/>
 
                     <Border Grid.Row="2"
-                            BorderBrush="{StaticResource SecondaryBrush}"
-                            BorderThickness="0 0.5 0 0">
+                        BorderBrush="{StaticResource SecondaryBrush}"
+                        BorderThickness="0 0.5 0 0">
                         <StackPanel Margin="20 14 20 26" >
-                            <TextBlock Text="Total" Margin="0 0 0 8"
-                                        Style="{DynamicResource SubtitleLabelStyle}"/>
+                            <TextBlock Text="{DynamicResource RegOrder_OrderSummary}" 
+                                       Margin="0 0 0 10"
+                                       Style="{DynamicResource SubtitleLabelStyle}"/>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
@@ -133,12 +137,12 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Grid.Column="0"
-                                           Text="Proveedor:"
-                                           Style="{DynamicResource DescriptionLabelStyle}" />
+                                       Text="Proveedor:"
+                                       Style="{DynamicResource DescriptionLabelStyle}" />
                                 <TextBlock x:Name="TbSupplier"
-                                           Grid.Column="1" HorizontalAlignment="Right"
-                                           Text="-"
-                                           Style="{DynamicResource RegularLabelStyle}"/>
+                                       Grid.Column="1" HorizontalAlignment="Right"
+                                       Text="-"
+                                       Style="{DynamicResource RegularLabelStyle}"/>
                             </Grid>
 
                             <Grid Margin="0 4 0 0">
@@ -148,12 +152,12 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Grid.Column="0"
-                                           Text="Fecha:"
-                                           Style="{DynamicResource DescriptionLabelStyle}" />
+                                       Text="Fecha:"
+                                       Style="{DynamicResource DescriptionLabelStyle}" />
                                 <TextBlock x:Name="OrderDate"
-                                           Grid.Column="1" HorizontalAlignment="Right"
-                                           Text="-"
-                                           Style="{DynamicResource RegularLabelStyle}"/>
+                                       Grid.Column="1" HorizontalAlignment="Right"
+                                       Text="-"
+                                       Style="{DynamicResource RegularLabelStyle}"/>
                             </Grid>
 
                             <Grid Margin="0 8 0 0">
@@ -163,12 +167,12 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Grid.Column="0"
-                                           Text="Total:" VerticalAlignment="Bottom"
-                                           Style="{DynamicResource DescriptionLabelStyle}" />
+                                       Text="Total:" VerticalAlignment="Bottom"
+                                       Style="{DynamicResource DescriptionLabelStyle}" />
                                 <TextBlock x:Name="TbTotal"
-                                           Grid.Column="1" HorizontalAlignment="Right"
-                                           Style="{DynamicResource SubtitleLabelStyle}"
-                                           FontFamily="{StaticResource SFProSemiBold}"/>
+                                       Grid.Column="1" HorizontalAlignment="Right"
+                                       Style="{DynamicResource SubtitleLabelStyle}"
+                                       FontFamily="{StaticResource SFProSemiBold}"/>
                             </Grid>
                         </StackPanel>
                     </Border>
@@ -179,23 +183,22 @@
         </Grid>
 
         <Border Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
-                BorderThickness="0,0.5,0,0">
+            BorderThickness="0,0.5,0,0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
                 <Button x:Name="BtnCancel" 
-                        Style="{DynamicResource SecondaryButtonNoIconStyle}"
-                        Content="{DynamicResource Glb_Cancel}"
-                        Margin="0 0 10 0"/>
+                    Style="{DynamicResource SecondaryButtonNoIconStyle}"
+                    Content="{DynamicResource Glb_Cancel}"
+                    Margin="0 0 10 0"/>
                 <Button x:Name="BtnConfirmOrder"
-                        Style="{DynamicResource PrimaryButtonStyle}"
-                        Content="{DynamicResource RegOrderSupplier_BtnConfirmOrder}"
-                        Click="Click_BtnConfirmOrder">
+                    Style="{DynamicResource PrimaryButtonStyle}"
+                    Content="{DynamicResource RegOrderSupplier_BtnConfirmOrder}"
+                    Click="Click_BtnConfirmOrder">
                     <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
                 </Button>
                 <Button x:Name="BtnEditOrder" 
-                        Style="{DynamicResource PrimaryButtonStyle}"
-                        Content="{DynamicResource RegOrderSupplier_BtnEditOrder}"
-                        Click="Click_BtnEditOrder"
-                        Visibility="Collapsed" >
+                    Style="{DynamicResource PrimaryButtonStyle}"
+                    Content="{DynamicResource RegOrderSupplier_BtnEditOrder}"
+                    Visibility="Collapsed" >
                     <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
                 </Button>
             </StackPanel>
