--- a/App.xaml
+++ b/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Resources/Styles/IconsStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/LabelsStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/TextBoxStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/ScrollerStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
