--- a/Resources/Styles/Animations.xaml
+++ b/Resources/Styles/Animations.xaml
@@ -16,7 +16,6 @@
         <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.08"/>
     </Storyboard>
 
-
     <Storyboard x:Key="ShowBorderAnimation">
         <DoubleAnimation Storyboard.TargetProperty="Opacity"
                          From="0" To="1" Duration="0:0:0.3"/>
@@ -39,5 +38,10 @@
             From="0" To="360" Duration="0:0:1.4"/>
     </Storyboard>
 
-
+    <Storyboard x:Key="ClickAnimation">
+        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                     To="0.9" Duration="0:0:0.08" AutoReverse="True" FillBehavior="Stop"/>
+        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
+                     To="0.9" Duration="0:0:0.08" AutoReverse="True" FillBehavior="Stop"/>
+    </Storyboard>
 </ResourceDictionary>
