--- a/Views/SuppliersModule/SuppliersPage.xaml
+++ b/Views/SuppliersModule/SuppliersPage.xaml
@@ -143,74 +143,78 @@
                     </Grid>
 
                     <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0.5,0,0,0">
-                        <Grid>
-                            <Grid Grid.Row="0" x:Name="SupplierDetailsPanel"
-                                  Visibility="Visible">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="Auto"/>
-                                </Grid.RowDefinitions>
+                        <Grid x:Name="SupplierDetailsPanel"
+                              Visibility="Collapsed" >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
 
-                                <StackPanel Grid.Row="0" Orientation="Vertical" Margin="20 20">
+                            <StackPanel Grid.Row="0" 
+                                        Orientation="Vertical" 
+                                        Margin="20 20" >
 
-                                    <ContentControl Style="{StaticResource TagStyle}" 
-                                                    Content="{DynamicResource Suppliers_TableHSupplier}"
-                                                    Margin="0 0 0 16"/>
+                                <ContentControl Style="{StaticResource TagStyle}" 
+                                                Content="{DynamicResource Suppliers_TableHSupplier}"
+                                                Margin="0 0 0 16" />
 
-                                    <TextBlock x:Name="SupplierName" FontSize="13"
-                                               Style="{DynamicResource SubtitleLabelStyle}"
-                                               Text="Quesos Vaquita"/>
-                                    <TextBlock x:Name="SupplyCategory" Margin="0 0 0 4"
-                                               Style="{DynamicResource RegularLabelStyle}"
-                                               Foreground="{StaticResource PrimaryButtonBrush}"
-                                               Text="Frutas y Verduras"/>
-                                    <TextBlock x:Name="ContactName"
-                                               Style="{DynamicResource DescriptionLabelStyle}"/>
-                                    <Border BorderThickness="0 0.5 0 0" BorderBrush="{DynamicResource SecondaryBrush}" Margin="0 10">
-                                        <StackPanel Orientation="Vertical" Margin="0,12">
-                                            <StackPanel Orientation="Horizontal" Margin="0 6 0 0">
-                                                <Image Source="/Resources/Icons/phone-icon.png" Style="{StaticResource IconViewStyle}"/>
-                                                <TextBlock x:Name="SupplierPhone" Style="{DynamicResource DescriptionLabelStyle}"/>
-                                            </StackPanel>
-
-                                            <StackPanel x:Name="EmailPanel"
-                                                        Orientation="Horizontal" Margin="0 6 0 0">
-                                                <Image Source="/Resources/Icons/email-icon.png" Style="{StaticResource IconViewStyle}"/>
-                                                <TextBlock x:Name="SupplierEmail" Style="{DynamicResource DescriptionLabelStyle}"/>
-                                            </StackPanel>
-
-                                            <TextBlock x:Name="SupplierDescription" Margin="0 8 0 0"
-                                                       Style="{DynamicResource DescriptionLabelStyle}"
-                                                       TextWrapping="Wrap" MaxWidth="200" HorizontalAlignment="Stretch"/>
+                                <TextBlock x:Name="SupplierName"
+                                           FontSize="13"
+                                           Style="{DynamicResource SubtitleLabelStyle}" />
+                                <TextBlock x:Name="SupplyCategory" 
+                                           Margin="0 0 0 4"
+                                           Style="{DynamicResource RegularLabelStyle}"
+                                           Foreground="{StaticResource PrimaryButtonBrush}" />
+                                <TextBlock x:Name="ContactName"
+                                           Style="{DynamicResource DescriptionLabelStyle}" />
+                                <Border BorderThickness="0 0.5 0 0" 
+                                        BorderBrush="{DynamicResource SecondaryBrush}" 
+                                        Margin="0 10" >
+                                    <StackPanel Orientation="Vertical" Margin="0,12">
+                                        <StackPanel Orientation="Horizontal" Margin="0 6 0 0">
+                                            <Image Source="/Resources/Icons/phone-icon.png" 
+                                                   Style="{StaticResource IconViewStyle}"/>
+                                            <TextBlock x:Name="SupplierPhone" 
+                                                       Style="{DynamicResource DescriptionLabelStyle}"/>
                                         </StackPanel>
-                                    </Border>
-                                </StackPanel>
 
-                                <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}"
-                                        BorderThickness="0 0.5 0 0">
-                                    <StackPanel VerticalAlignment="Center" Margin="20">
-                                        <Button x:Name="BtnEditSupplier" 
-                                                Style="{DynamicResource PrimaryButtonStyle}"
-                                                Content="{DynamicResource Suppliers_BtnEditSupplier}" Margin="0 0 0 6" 
-                                                Click="Click_BtnEditSupplier">
-                                            <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
-                                        </Button>
-                                        <Button x:Name="BtnDeleteSupplier" 
-                                                Style="{DynamicResource DangerButtonStyle}"
-                                                Content="{DynamicResource Suppliers_BtnDeleteSupplier}" 
-                                                Click="Click_BtnDeleteSupplier" >
-                                            <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
-                                        </Button>
-                                        <Button x:Name="BtnReactivateSupplier" Visibility="Collapsed"
-                                                Style="{DynamicResource PrimaryButtonStyle}"
-                                                Content="{DynamicResource Suppliers_BtnReactivateSupplier}"
-                                                Click="Click_BtnReactivateSupplier" >
-                                            <Button.Tag>/Resources/Icons/reactivate-icon.png</Button.Tag>
-                                        </Button>
+                                        <StackPanel x:Name="EmailPanel"
+                                                    Orientation="Horizontal" 
+                                                    Margin="0 6 0 0" >
+                                            <Image Source="/Resources/Icons/email-icon.png" Style="{StaticResource IconViewStyle}"/>
+                                            <TextBlock x:Name="SupplierEmail" Style="{DynamicResource DescriptionLabelStyle}"/>
+                                        </StackPanel>
+
+                                        <TextBlock x:Name="SupplierDescription" Margin="0 8 0 0"
+                           Style="{DynamicResource DescriptionLabelStyle}"
+                           TextWrapping="Wrap" MaxWidth="200" HorizontalAlignment="Stretch"/>
                                     </StackPanel>
                                 </Border>
+                            </StackPanel>
 
-                            </Grid>
+                            <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}"
+            BorderThickness="0 0.5 0 0">
+                                <StackPanel VerticalAlignment="Center" Margin="20">
+                                    <Button x:Name="BtnEditSupplier" 
+                    Style="{DynamicResource PrimaryButtonStyle}"
+                    Content="{DynamicResource Suppliers_BtnEditSupplier}" Margin="0 0 0 6" 
+                    Click="Click_BtnEditSupplier">
+                                        <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
+                                    </Button>
+                                    <Button x:Name="BtnDeleteSupplier" 
+                    Style="{DynamicResource DangerButtonStyle}"
+                    Content="{DynamicResource Suppliers_BtnDeleteSupplier}" 
+                    Click="Click_BtnDeleteSupplier" >
+                                        <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
+                                    </Button>
+                                    <Button x:Name="BtnReactivateSupplier" Visibility="Collapsed"
+                    Style="{DynamicResource PrimaryButtonStyle}"
+                    Content="{DynamicResource Suppliers_BtnReactivateSupplier}"
+                    Click="Click_BtnReactivateSupplier" >
+                                        <Button.Tag>/Resources/Icons/reactivate-icon.png</Button.Tag>
+                                    </Button>
+                                </StackPanel>
+                            </Border>
                         </Grid>
                     </Border>
                 </Grid>
