--- a/Views/SuppliesModule/SuppliesPage.xaml
+++ b/Views/SuppliesModule/SuppliesPage.xaml
@@ -92,7 +92,7 @@
 
                         <StackPanel Grid.Row="0" Orientation="Horizontal" 
                                     VerticalAlignment="Bottom" 
-                                    Margin="20 0">
+                                    Margin="20 0" >
                             <TextBlock Text="{DynamicResource Supplies_TitleTable}"
                                        Style="{DynamicResource SubtitleLabelStyle}"
                                        Margin="0 0 8 0"/>
@@ -140,75 +140,90 @@
                         </Grid>
                     </Grid>
 
-                    <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0.5 0 0 0">
+                    <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" 
+                            BorderThickness="0.5 0 0 0">
                         <Grid>
                             <Grid Grid.Row="0" x:Name="SupplyDetailsPanel"
                                   Visibility="Visible">
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="40"/>
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
 
-                                <StackPanel Grid.Row="0" Orientation="Vertical" Margin="20 20">
-
+                                <StackPanel Grid.Row="0" Orientation="Horizontal" 
+                                            VerticalAlignment="Bottom" 
+                                            Margin="20 0" >
                                     <ContentControl Style="{StaticResource TagStyle}" 
                                                     Content="{DynamicResource Supplies_TableHSupply}"/>
+                                </StackPanel>
 
+                                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="20 0">
                                     <Image Name="SupplyPic"
                                            HorizontalAlignment="Left"
                                            Width="120" Height="120" Stretch="Fill"
                                            VerticalAlignment="Center" RenderOptions.BitmapScalingMode="HighQuality"
-                                           Margin="0 16">
+                                           Margin="0 10 0 16">
                                         <Image.Clip>
                                             <RectangleGeometry Rect="0 0 120 120" RadiusX="16" RadiusY="16"/>
                                         </Image.Clip>
                                     </Image>
 
-                                    <TextBlock x:Name="SupplyBrand" Text="KIRKLAND®"
-                                               Style="{DynamicResource HeaderLabelStyle}" FontFamily="{StaticResource SFProBold}"
+                                    <TextBlock x:Name="SupplyBrand"
+                                               Style="{DynamicResource HeaderLabelStyle}" 
+                                               FontFamily="{StaticResource SFProBold}"
                                                FontSize="10"/>
                                     <TextBlock x:Name="SupplyName" FontSize="13"
-                                               Style="{DynamicResource SubtitleLabelStyle}"
-                                               Text="ABC"/>
+                                               Style="{DynamicResource SubtitleLabelStyle}" />
                                     <TextBlock x:Name="SupplyCategory" Margin="0 0 0 4"
                                                Style="{DynamicResource RegularLabelStyle}"
-                                               Foreground="{StaticResource PrimaryButtonBrush}"
-                                               Text="Frutas y Verduras"/>
+                                               Foreground="{StaticResource PrimaryButtonBrush}" />
                                     <TextBlock x:Name="SupplierName"
-                                               Style="{DynamicResource DescriptionLabelStyle}"/>
+                                               Style="{DynamicResource DescriptionLabelStyle}" />
                                     <Border BorderThickness="0,0.5,0,0" BorderBrush="{DynamicResource SecondaryBrush}" Margin="0,8">
-                                        <StackPanel Orientation="Vertical" Margin="0,12">
-
+                                        <StackPanel Orientation="Vertical" Margin="0 12">
                                             <TextBlock x:Name="SupplyDescription"
-                                                        Style="{DynamicResource DescriptionLabelStyle}"
-                                                        TextWrapping="Wrap" MaxWidth="200" HorizontalAlignment="Stretch"/>
-
+                                                       Style="{DynamicResource DescriptionLabelStyle}"
+                                                       TextWrapping="Wrap" MaxWidth="200" 
+                                                       HorizontalAlignment="Stretch" />
                                         </StackPanel>
                                     </Border>
                                 </StackPanel>
 
-                                <Border Grid.Row="1" BorderBrush="{DynamicResource SecondaryBrush}"
-                                        BorderThickness="0 0.5 0 0">
-                                    <StackPanel VerticalAlignment="Center" Margin="20">
-                                        <Button x:Name="BtnEditSupply" 
-                                                Style="{DynamicResource PrimaryButtonStyle}"
-                                                Content="{DynamicResource Supplies_BtnEditSupply}" Margin="0 0 0 6"
-                                                Click="Click_BtnEditSupply">
-                                            <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
-                                        </Button>
-                                        <Button x:Name="BtnDeleteSupply" 
-                                                Style="{DynamicResource DangerButtonStyle}"
-                                                Content="{DynamicResource Supplies_BtnDeleteSupply}" 
-                                                Click="Click_BtnDeleteSupply">
-                                            <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
-                                        </Button>
-                                        <Button x:Name="BtnReactivateSupply" Visibility="Collapsed"
+                                <Border Grid.Row="2" 
+                                        BorderBrush="{DynamicResource SecondaryBrush}"
+                                        BorderThickness="0 0.5 0 0" >
+                                    <Grid Margin="20" >
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <Button x:Name="BtnReactivateSupply" 
+                                                Grid.ColumnSpan="2"
+                                                Visibility="Collapsed"
                                                 Style="{DynamicResource PrimaryButtonStyle}"
                                                 Content="{DynamicResource Supplies_BtnReactivateSupply}"
-                                                Click="Click_BtnReactivateSupply">
+                                                Click="Click_BtnReactivateSupply" >
                                             <Button.Tag>/Resources/Icons/reactivate-icon.png</Button.Tag>
                                         </Button>
-                                    </StackPanel>
+
+                                        <Button x:Name="BtnDeleteSupply" Grid.Column="0"
+                                                Margin="0 0 5 0"
+                                                Style="{DynamicResource DangerButtonStyle}"
+                                                Content="{DynamicResource Glb_Delete}" 
+                                                Click="Click_BtnDeleteSupply" >
+                                            <Button.Tag>/Resources/Icons/delete-icon.png</Button.Tag>
+                                        </Button>
+
+                                        <Button x:Name="BtnEditSupply" Grid.Column="1"
+                                                Margin="5 0 0 0"
+                                                Style="{DynamicResource PrimaryButtonStyle}"
+                                                Content="{DynamicResource Glb_Edit}"
+                                                Click="Click_BtnEditSupply" >
+                                            <Button.Tag>/Resources/Icons/edit-icon.png</Button.Tag>
+                                        </Button>
+                                    </Grid>
                                 </Border>
 
                             </Grid>
