--- a/Views/UserControls/SupplyOrderDetail.xaml
+++ b/Views/UserControls/SupplyOrderDetail.xaml
@@ -1,16 +1,16 @@
 ﻿<UserControl x:Class="ItaliaPizzaClient.Views.UserControls.SupplyOrderDetail"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ItaliaPizzaClient.Views.UserControls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="68" d:DesignWidth="200">
     <Border Background="{StaticResource BackgroundBrush}"
-            BorderThickness="0 0 0 0.5" 
+            BorderThickness="0 0 0 0.5"
             BorderBrush="{DynamicResource SecondaryBrush}"
-            Padding="0 4 0 8" >
-        <Grid>
+            Padding="0 4 0 8">
+        <Grid VerticalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="44" />
                 <ColumnDefinition Width="*" />
@@ -29,50 +29,56 @@
 
             <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center"
                         Margin="10 0 0 0">
-                <Grid>
+                <Grid Margin="0 0 0 0" Height="24">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock x:Name="SupplyTitle" Grid.Column="0" Text="{Binding SupplyName}" 
+                    <TextBlock x:Name="SupplyTitle" Grid.Column="0"
+                               Text="{Binding SupplyName}"
                                Style="{DynamicResource RegularLabelStyle}"
                                FontFamily="{StaticResource SFProMedium}"
-                               FontSize="14" VerticalAlignment="Center" 
+                               FontSize="14"
+                               VerticalAlignment="Center"
                                TextTrimming="CharacterEllipsis" />
-                    <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal"
+
+                    <StackPanel Grid.Column="1" HorizontalAlignment="Right"
+                                Orientation="Horizontal"
                                 Margin="8 0 0 0">
                         <Button x:Name="BtnEdit"
-                                Style="{DynamicResource EditButtonStyle}" />
+                                Style="{DynamicResource EditButtonStyle}"
+                                Click="Click_BtnEdit" />
                         <Button x:Name="BtnDelete"
-                                Style="{DynamicResource DeleteButtonStyle}" 
+                                Style="{DynamicResource DeleteButtonStyle}"
                                 Click="Click_BtnDelete" />
+                        <Button x:Name="BtnConfirm"
+                                Style="{DynamicResource ConfirmButtonStyle}"
+                                Click="Click_BtnConfirm"
+                                Visibility="Collapsed" />
                     </StackPanel>
-
                 </Grid>
 
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Orientation="Horizontal">
-                        <TextBox x:Name="TbQuantity"
-                                 Text="{Binding QuantityText, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"
-                                 Width="60"
-                                 Style="{DynamicResource TransparentTextBoxStyle}"/>
-
-                    </StackPanel>
+                    <TextBox x:Name="TbQuantity"
+                             Text="{Binding QuantityText, Mode=TwoWay, UpdateSourceTrigger=LostFocus}"
+                             Style="{DynamicResource QuantityTextBoxStyle}"
+                             IsEnabled="False"
+                             VerticalAlignment="Center" />
 
                     <TextBlock Grid.Column="1"
                                Text="{Binding Subtotal, StringFormat={}{0:C}}"
                                Style="{StaticResource RegularLabelStyle}"
-                               FontFamily="{StaticResource SFProBold}"
-                               Foreground="{StaticResource PrimaryButtonBrush}"/>
+                               Foreground="{StaticResource PrimaryButtonBrush}"
+                               HorizontalAlignment="Right"
+                               VerticalAlignment="Bottom"
+                               Margin="10 0 0 0" />
                 </Grid>
-
-                
             </StackPanel>
         </Grid>
     </Border>
